force-app/main/default/objects/Opp_Product__c/Opp_Product__c.object-meta.xml
<CustomObject>
    <description>Products to be added in Opportunities, substitutes former GPS and Wireless Products.</description>
    <label>Opp Product</label>
    <nameField>
        <displayFormat>OppProd-{000000}</displayFormat>
        <label>Opp Product Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opp Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>