force-app/main/default/objects/Opp_Product__c/fields/a4a_Key_Manual_Forecast__c.field-meta.xml
<CustomField>
    <fullName>a4a_Key_Manual_Forecast__c</fullName>
    <formula>IF(
Flagged_Item__c,
a4a_Key_Body_Index_Manual_Forecast__c
&amp;
&quot;Meaning:ForecastAdjustment/Cube:ForecastAdjustment/Year:2020/Month:01/&quot;
,
null
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4a Key Manual Forecast</label>
    <type>Text</type>
</CustomField>