force-app/main/default/objects/Opp_Product__c/fields/a4x_Applicable_Sales_Price_CHF__c.field-meta.xml
<CustomField>
    <fullName>a4x_Applicable_Sales_Price_CHF__c</fullName>
    <label>a4x Applicable Sales Price CHF</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>