force-app/main/default/objects/Opp_Product__c/fields/a4x_Budget_Filter__c.field-meta.xml
<CustomField>
    <fullName>a4x_Budget_Filter__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Do not change - used for Budget Process</description>
    <label>a4x Budget Filter</label>
    <type>Checkbox</type>
</CustomField>