force-app/main/default/objects/Opp_Product__c/fields/a4x_Budget_Filter_Text__c.field-meta.xml
<CustomField>
    <fullName>a4x_Budget_Filter_Text__c</fullName>
    <description>Do not change - used for Dimension Update - App4Forecast</description>
    <formula>IF(
a4x_Budget_Filter_Formula__c ,
&quot;True&quot;,
&quot;False&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4x Budget Filter Text</label>
    <type>Text</type>
</CustomField>