force-app/main/default/objects/Opp_Product__c/fields/a4x_Budget_Upside_Potential__c.field-meta.xml
<CustomField>
    <fullName>a4x_Budget_Upside_Potential__c</fullName>
    <formula>Budget_Upside_Potential__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4x Budget Upside Potential</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>