force-app/main/default/objects/Opp_Product__c/fields/a4x_COGS_NEXT_FY_Q1__c.field-meta.xml
<CustomField>
    <fullName>a4x_COGS_NEXT_FY_Q1__c</fullName>
    <formula>(Budget_COGS_1__c  +  IPR_value_next_FY__c )

* 1

*

CASE(CurrencyIsoCode,
&quot;EUR&quot;,0.99,
&quot;USD&quot;,0.98,
&quot;GBP&quot;,1.234,
&quot;JPY&quot;,0.00789,
1)

/*

(Budget_COGS_1__c  +  IPR_value_next_FY__c )

* 1

*

CASE(CurrencyIsoCode,
&quot;EUR&quot;,1.045,
&quot;USD&quot;,0.935,
&quot;GBP&quot;,1.234,
&quot;JPY&quot;,0.00789,
1)



(Budget_COGS_1__c  +  IPR_value_next_FY__c )

*

CASE(CurrencyIsoCode,
&quot;EUR&quot;,1.08,
&quot;USD&quot;,0.92,
&quot;JPY&quot;,0.0083,
1)
*/

/*
(Budget_COGS_1__c  +  IPR_value_next_FY__c )

/

CASE(CurrencyIsoCode,
&quot;CHF&quot;,$User.USDtoCHF__c,
&quot;JPY&quot;,$User.USDtoJPY__c,
&quot;EUR&quot;,$User.USDtoEUR__c,
1)

*$User.USDtoCHF__c
*/

/*
IF(NOT(ISBLANK(TRIM(SUBSTITUTE(LEFT(Next_Year_COGS_Budget__c,(FIND(&quot;:2#&quot;,Next_Year_COGS_Budget__c)-1)),&quot;1#&quot;,&quot;&quot;)))),VALUE(TRIM(SUBSTITUTE(LEFT(Next_Year_COGS_Budget__c,(FIND(&quot;:2#&quot;,Next_Year_COGS_Budget__c)-1)),&quot;1#&quot;,&quot;&quot;))),0)*
$User.USDtoCHF__c
*/

/*

Budget_COGS_1__c 
*
CURRENCYRATE(&quot;CHF&quot;)
/
CASE(CurrencyIsoCode,
&quot;EUR&quot;, CURRENCYRATE(&quot;EUR&quot;),
&quot;CHF&quot;, CURRENCYRATE(&quot;CHF&quot;),
&quot;CNY&quot;, CURRENCYRATE(&quot;CNY&quot;),
&quot;JPY&quot;, CURRENCYRATE(&quot;JPY&quot;),
1
)

*/

/*
IF(
(LEFT(Product__r.Valid_For_1__c,6) = &quot;Jan &quot; &amp; RIGHT(TEXT(YEAR(TODAY())+1),2) || LEFT(Product__r.Valid_For_1__c,6) = &quot;Feb &quot;  &amp; RIGHT(TEXT(YEAR(TODAY())+1),2) || LEFT(Product__r.Valid_For_1__c,6) = &quot;Mar &quot;  &amp; RIGHT(TEXT(YEAR(TODAY())+1),2) )
,
Product__r.COGS_1__c 
,
IF(
(LEFT(Product__r.Valid_For_2__c,6) = &quot;Jan &quot; &amp; RIGHT(TEXT(YEAR(TODAY())+1),2) || LEFT(Product__r.Valid_For_2__c,6) = &quot;Feb &quot;  &amp; RIGHT(TEXT(YEAR(TODAY())+1),2) || LEFT(Product__r.Valid_For_2__c,6) = &quot;Mar &quot;  &amp; TEXT(YEAR(TODAY()+1)) )
,
Product__r.COGS_2__c 
,
IF(
(LEFT(Product__r.Valid_For_3__c,6) = &quot;Jan &quot; &amp; RIGHT(TEXT(YEAR(TODAY())+1),2) || LEFT(Product__r.Valid_For_3__c,6) = &quot;Feb &quot;  &amp; RIGHT(TEXT(YEAR(TODAY())+1),2) || LEFT(Product__r.Valid_For_3__c,6) = &quot;Mar &quot;  &amp; RIGHT(TEXT(YEAR(TODAY())+1),2))
,
Product__r.COGS_3__c 
,
Product__r.COGS_4__c
)
)
)
*
CURRENCYRATE(&quot;CHF&quot;)
/
CASE(CurrencyIsoCode,
&quot;EUR&quot;, CURRENCYRATE(&quot;EUR&quot;),
&quot;CHF&quot;, CURRENCYRATE(&quot;CHF&quot;),
&quot;CNY&quot;, CURRENCYRATE(&quot;CNY&quot;),
&quot;JPY&quot;, CURRENCYRATE(&quot;JPY&quot;),
1
)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4x COGS NEXT FY Q1</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>