force-app/main/default/objects/Opp_Product__c/fields/a4x_Exclude_From_Budget__c.field-meta.xml
<CustomField>
    <fullName>a4x_Exclude_From_Budget__c</fullName>
    <defaultValue>false</defaultValue>
    <label>a4x Exclude From Budget</label>
    <type>Checkbox</type>
</CustomField>