force-app/main/default/objects/Opp_Product__c/fields/a4x_Key_Dim_Update__c.field-meta.xml
<CustomField>
    <fullName>a4x_Key_Dim_Update__c</fullName>
    <description>Do not change - used for Dimension Update - App4Forecast</description>
    <externalId>true</externalId>
    <label>a4x Key Dim Update</label>
    <length>100</length>
    <type>Text</type>
</CustomField>