force-app/main/default/objects/Opp_Product__c/fields/a4x_Report_Filter_Reference__c.field-meta.xml
<CustomField>
    <fullName>a4x_Report_Filter_Reference__c</fullName>
    <description>used for filtering the corresponding Opportunity Products to a A4F Manual Forecast</description>
    <formula>SF_Account_Number__c &amp;&quot;-&quot;&amp; Ordering_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>a4x Report Filter Reference</label>
    <type>Text</type>
</CustomField>