force-app/main/default/objects/Opp_Product__c/fields/Actual_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>Actual_Sales_Price__c</fullName>
    <formula>a4x_Applicable_Sales_Price_CHF__c 

/  

CASE(CurrencyIsoCode,
&quot;EUR&quot;,  $Setup.Constant_Exchange_Rates__c.EUR2CHF__c ,
&quot;JPY&quot;,   $Setup.Constant_Exchange_Rates__c.JPY2CHF__c ,
&quot;USD&quot;, $Setup.Constant_Exchange_Rates__c.USD2CHF__c ,
1
)
/*
a4x_Latest_Sales_Price_CHF__c 

/ $User.USDtoCHF__c

*

CASE(CurrencyIsoCode,
&quot;EUR&quot;, $User.USDtoEUR__c,
&quot;JPY&quot;,  $User.USDtoJPY__c,
  1
)
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Actual Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>