force-app/main/default/objects/Opp_Product__c/fields/Annual_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Annual_Quantity__c</fullName>
    <inlineHelpText>On creation, if empty copied from the master Opportunity after Save. Edit as needed.</inlineHelpText>
    <label>Annual Quantity</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>