force-app/main/default/objects/Opp_Product__c/fields/Application_Type__c.field-meta.xml
<CustomField>
    <fullName>Application_Type__c</fullName>
    <formula>text(Opportunity__r.Application_type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Old Application Type</label>
    <type>Text</type>
</CustomField>