force-app/main/default/objects/Opp_Product__c/fields/Budget_Calculate_Price__c.field-meta.xml
<CustomField>
    <fullName>Budget_Calculate_Price__c</fullName>
    <formula>IF( Budget_Price_next_FY__c&gt;0 , Budget_Price_next_FY__c, IF( Actual_Sales_Price__c &gt;0 , Actual_Sales_Price__c, IF( Unit_Price_Final__c &gt;0 , Unit_Price_Final__c, Unit_Price__c ) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Budget Calculate Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>