force-app/main/default/objects/Opp_Product__c/fields/Budget_COGS_3__c.field-meta.xml
<CustomField>
    <fullName>Budget_COGS_3__c</fullName>
    <description>Formula field to show Next year budget COGS for Quarter 3</description>
    <formula>IF(NOT(ISBLANK(TRIM(SUBSTITUTE(LEFT(Next_Year_COGS_Budget__c,(FIND(&quot;:4#&quot;,Next_Year_COGS_Budget__c)-1)),LEFT(Next_Year_COGS_Budget__c,(FIND(&quot;:3#&quot;,Next_Year_COGS_Budget__c)+2)),&quot;&quot;)))),VALUE(TRIM(SUBSTITUTE(LEFT(Next_Year_COGS_Budget__c,(FIND(&quot;:4#&quot;,Next_Year_COGS_Budget__c)-1)),LEFT(Next_Year_COGS_Budget__c,(FIND(&quot;:3#&quot;,Next_Year_COGS_Budget__c)+2)),&quot;&quot;)))*
CASE(CurrencyIsoCode,
&quot;USD&quot;,1,
&quot;CHF&quot;,0.98,
&quot;JPY&quot;,0.98/0.00789,
&quot;EUR&quot;,0.98/0.99,
1),IF( NOT(ISBLANK(Budget_COGS_2__c)) , Budget_COGS_2__c, 0))

/*
IF(NOT(ISBLANK(TRIM(SUBSTITUTE(LEFT(Next_Year_COGS_Budget__c,(FIND(&quot;:4#&quot;,Next_Year_COGS_Budget__c)-1)),LEFT(Next_Year_COGS_Budget__c,(FIND(&quot;:3#&quot;,Next_Year_COGS_Budget__c)+2)),&quot;&quot;)))),VALUE(TRIM(SUBSTITUTE(LEFT(Next_Year_COGS_Budget__c,(FIND(&quot;:4#&quot;,Next_Year_COGS_Budget__c)-1)),LEFT(Next_Year_COGS_Budget__c,(FIND(&quot;:3#&quot;,Next_Year_COGS_Budget__c)+2)),&quot;&quot;)))*
CASE(CurrencyIsoCode,
&quot;CHF&quot;,0.935,
&quot;JPY&quot;,0.935/0.00789,
&quot;EUR&quot;,0.935/1.045, 
1),IF( NOT(ISBLANK(Budget_COGS_2__c)) , Budget_COGS_2__c, 0))


IF(NOT(ISBLANK(TRIM(SUBSTITUTE(LEFT(Next_Year_COGS_Budget__c,(FIND(&quot;:3#&quot;,Next_Year_COGS_Budget__c)-1)),LEFT(Next_Year_COGS_Budget__c,(FIND(&quot;:2#&quot;,Next_Year_COGS_Budget__c)+2)),&quot;&quot;)))),VALUE(TRIM(SUBSTITUTE(LEFT(Next_Year_COGS_Budget__c,(FIND(&quot;:3#&quot;,Next_Year_COGS_Budget__c)-1)),LEFT(Next_Year_COGS_Budget__c,(FIND(&quot;:2#&quot;,Next_Year_COGS_Budget__c)+2)),&quot;&quot;)))*
CASE(CurrencyIsoCode,
&quot;CHF&quot;,$User.USDtoCHF__c,
&quot;JPY&quot;,$User.USDtoJPY__c,
&quot;EUR&quot;,$User.USDtoEUR__c,
1),IF( NOT(ISBLANK(Product__r.COGS_4__c)) , Product__r.COGS_4__c, 0))
*/</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>COGS next FY Q3</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>