force-app/main/default/objects/Opp_Product__c/fields/Budget_IPR__c.field-meta.xml
<CustomField>
    <fullName>Budget_IPR__c</fullName>
    <label>Budget IPR</label>
    <precision>6</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>