force-app/main/default/objects/Opp_Product__c/fields/Budget_IPR_Amount__c.field-meta.xml
<CustomField>
    <fullName>Budget_IPR_Amount__c</fullName>
    <label>Budget IPR Amount</label>
    <precision>11</precision>
    <scale>3</scale>
    <type>Currency</type>
</CustomField>