force-app/main/default/objects/Opp_Product__c/fields/Budget_Item__c.field-meta.xml
<CustomField>
    <fullName>Budget_Item__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Budget Item</label>
    <type>Checkbox</type>
</CustomField>