force-app/main/default/objects/Opp_Product__c/fields/Budget_Price_next_FY__c.field-meta.xml
<CustomField>
    <fullName>Budget_Price_next_FY__c</fullName>
    <label>Budget Price next FY</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Currency</type>
</CustomField>