force-app/main/default/objects/Opp_Product__c/fields/Budget_Upside_Potential__c.field-meta.xml
<CustomField>
    <fullName>Budget_Upside_Potential__c</fullName>
    <label>Budget Upside Potential</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>