force-app/main/default/objects/Opp_Product__c/fields/Calculate_CogsBudget__c.field-meta.xml
<CustomField>
    <fullName>Calculate_CogsBudget__c</fullName>
    <formula>Update_Contribution__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculate COGS Budget</label>
    <type>Checkbox</type>
</CustomField>