force-app/main/default/objects/Opp_Product__c/fields/Channel_Manager__c.field-meta.xml
<CustomField>
    <fullName>Channel_Manager__c</fullName>
    <formula>Opportunity__r.Account_Channel_Manager__c</formula>
    <label>Channel Manager</label>
    <type>Text</type>
</CustomField>