force-app/main/default/objects/Opp_Product__c/fields/CM_pct__c.field-meta.xml
<CustomField>
    <fullName>CM_pct__c</fullName>
    <formula>if(Revenue__c = 0, 0, Contribution__c / Revenue__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>CM [%]</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>