force-app/main/default/objects/Opp_Product__c/fields/COGS__c.field-meta.xml
<CustomField>
    <fullName>COGS__c</fullName>
    <description>COGS including IPR, updated with Workflow (Field Update) initiated by checkbox &quot;Update Contribution&quot; (triggered also by Apex Triggen when change in Product has been made)</description>
    <inlineHelpText>COGS including IPR, updated with Workflow (Field Update) initiated by checkbox &quot;Update Contribution&quot; (triggered also by Apex Triggen when change in Product has been made)</inlineHelpText>
    <label>COGS</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>