force-app/main/default/objects/Opp_Product__c/fields/Competition_Remark__c.field-meta.xml
<CustomField>
    <fullName>Competition_Remark__c</fullName>
    <label>Competition Remark</label>
    <type>TextArea</type>
</CustomField>