force-app/main/default/objects/Opp_Product__c/fields/Contribution_Unweighted__c.field-meta.xml
<CustomField>
    <fullName>Contribution_Unweighted__c</fullName>
    <description>Revenue Unweighted (not multiplied by Probability) - Annual Quantity * COGS</description>
    <formula>if( AND(RecordTypeId = &quot;0122p00000043gT&quot;, Opportunity_Lifetime_Year__c &gt; 1 ),
Revenue_Unweighted__c - Annual_Quantity__c * COGS__c * (Opportunity_Lifetime_Year__c - 1),
Revenue_Unweighted__c - Annual_Quantity__c * COGS__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Revenue Unweighted (not multiplied by Probability) - Annual Quantity * COGS</inlineHelpText>
    <label>Contribution Unweighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>